<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
            android:id="@+id/connect"
            android:orderInCategory="100"
            android:showAsAction="always"
            android:icon="@drawable/stat_sys_data_bluetooth"
            android:title="@string/action_connect"/>
    <item
            android:id="@+id/disconnect"
            android:orderInCategory="100"
            android:showAsAction="always"
            android:icon="@drawable/stat_sys_data_bluetooth_connected"
            android:title="@string/action_disconnect"/>
    <item
            android:id="@+id/login"
            android:orderInCategory="100"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/action_login"/>
    <item
            android:id="@+id/search"
            android:orderInCategory="100"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/action_search"/>
    <item
            android:id="@+id/tutorial"
            android:orderInCategory="100"
            android:icon="@drawable/ic_menu_info_details"
            android:title="@string/action_tutorial"/>

</menu>